fix: Code highlight and text wrapping for <code>

--- a/css/main.css
+++ b/css/main.css
@@ -223,7 +223,8 @@ img {
   margin: auto;
   height: auto;
   max-width: 90vw;
-  width: 100%;
+  max-width: 100%;
+  display: block;
 }
 
 img.img-overflow {
